--- a/_sass/wp-compat.scss
+++ b/_sass/wp-compat.scss
@@ -20,3 +20,21 @@ img.aligncenter {
 	display: block;
 	clear: both;
 }
+
+#content {
+    /* margin:0 0 0 10px; */
+    width:540px;
+    overflow:hidden;
+}
+
+.portfolio_thumb_section {
+     overflow: auto;
+}
+
+.portfolio_thumb_item {
+    float: left;
+    margin-right: 5px;
+    margin-bottom: 10px;
+    width: 155px;
+    height: 200px;
+}
