--- a/_sass/wp-compat.scss
+++ b/_sass/wp-compat.scss
@@ -51,6 +51,7 @@ h3.go_link {
 table.project_info_box {
     border: none;
     border-collapse: collapse;
+    margin: 0 0 22px 0;
 
     tr {
         border-bottom: 1px solid #ccc;
