--- a/_layouts/portfolio-index.html
+++ b/_layouts/portfolio-index.html
@@ -7,7 +7,7 @@ layout: default
     <div class="portfolio_thumb_section">
 {% for item in site.works reversed %}
         <div class="portfolio_thumb_item">
-            <a href="{{ item.url }}"><img class="alignleft" src="{{ item.portfolio.cover | replace: ".png", "-150x150.png" |  replace: ".jpg", "-150x150.jpg" | replace: ".jpeg", "-150x150.jpg"  }}"/></a>
+            <a href="{{ item.url }}"><img class="alignleft" src="{{ item.portfolio.cover.thumb }}"/></a>
             <a href="{{ item.url }}">{{ item.title }}</a>
         </div>
 {% endfor %}
