--- a/_sass/wp-compat.scss
+++ b/_sass/wp-compat.scss
@@ -43,6 +43,14 @@ img.aligncenter {
     padding: 22px 0 0 0;
 }
 
+.entry-utility {
+    clear: both;
+    color: #666;
+    font-size: 13px;
+    line-height: 18px;
+    margin: 0 0 44px 0;
+}
+
 h3.go_link {
     font-size: 150%;
     margin-top: 20px;
