--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -39,7 +39,11 @@ layout: default
     {% for media in page.portfolio.media %}
         {% if media.type == "image" %}
         <a href="{{ media.value }}">
+            {% if media.thumb %}
+            <img width="150" height="150" src="{{ media.thumb }}">
+            {% else %}
             <img width="150" height="150" src="{{ media.value | replace: ".png", "-150x150.png" |  replace: ".jpg", "-150x150.jpg" | replace: ".jpeg", "-150x150.jpg"  }}">
+            {% endif %}
         </a>
         {% endif %}
         {% if media.type == "youtube" %}
