add itch.io link, fix some dead links, add some missing portfolio pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,9 +32,9 @@
           </li>
           {% endif %}
 
-          {% if site.twitter_username %}
+          {% if site.itchio_url %}
           <li>
-            {% include icon-twitter.html username=site.twitter_username %}
+            {% include icon-itchio.html url=site.itchio_url username=site.itchio_username %}
           </li>
           {% endif %}
         </ul>
