--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,7 +4,7 @@ layout: default
 <h1>{{ page.title }}</h1> 
 <div class="entry-content">
     <a href="{{ page.portfolio.cover.value }}">
-        <img class="alignleft" src="{{ page.portfolio.cover.medium }}">
+        <img class="alignleft header-image" src="{{ page.portfolio.cover.medium }}">
     </a>
     {{ content }}
     {% if page.portfolio.play %}
