--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -50,7 +50,7 @@ layout: default
         {% endif %}
         {% if media.type == "youtube" %}
         <p class="youtube_player">
-            <iframe width="540" height="405" src="https://www.youtube-nocookie.com/embed/{{ media.value }}?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="youtube_iframe" src="https://www.youtube-nocookie.com/embed/{{ media.value }}?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </p>
         {% endif %}
     {% endfor %}
