--- a/_sass/wp-compat.scss
+++ b/_sass/wp-compat.scss
@@ -27,6 +27,21 @@ img.gallery_thumb {
 
 .youtube_player {
     margin-top: 5px;
+    position: relative;
+    overflow: hidden;
+    padding-top: 50%;
+    max-width: 540px;
+    max-height: 405px;
+}
+
+.youtube_iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #content {
