--- a/_sass/wp-compat.scss
+++ b/_sass/wp-compat.scss
@@ -117,6 +117,18 @@ table.project_info_box {
     width: calc(50% - (30px / 2));
 }
 
+.social-media-list li {
+    // background-color: green;
+}
+
+.icon {
+    // background-color: blue;
+}
+
+.icon svg {
+    // background-color: red;
+}
+
 .header-image {
     padding-bottom: 15px;
 }
