--- a/_sass/wp-compat.scss
+++ b/_sass/wp-compat.scss
@@ -68,6 +68,11 @@ $portfolio_thumb_item_width: 150px;
 
 .portfolio_thumb_item {
     max-width: $portfolio_thumb_item_width;
+    display: none;
+}
+
+.portfolio_thumb_item.is_visible {
+	display: block;
 }
 
 .portfolio_index_date {
