set up noscript navigation for category filters on portfolio

--- a/_sass/wp-compat.scss
+++ b/_sass/wp-compat.scss
@@ -81,6 +81,10 @@ $portfolio_thumb_item_width: 150px;
     top: -30px;
 }
 
+.invisible {
+    display: none;
+}
+
 .portfolio_index_date {
     font-size: 10pt;
     color: gray;
