--- a/_layouts/portfolio-index.html
+++ b/_layouts/portfolio-index.html
@@ -1,13 +1,23 @@
 ---
 layout: default
 ---
-{%- assign categories = "Featured,All,Games,Hardware,Personal,Work,Mods,Visuals,Art" | split: "," -%}
+{%- assign categories = "Featured,All,Games,Hardware,Personal,Work,Mods,Live Visuals,Art" | split: "," -%}
+{%- assign category_links = "/,/portfolio/all,/portfolio/games,/portfolio/hardware,/portfolio/personal,/portfolio/work,/portfolio/mods,/portfolio/visuals,/portfolio/art" | split: "," -%}
 <script src="{{ site.baseurl }}{% link assets/js/main.js %}"></script>
 <div id="content">
     {%- comment -%}
     Selected category: {{page.selected_category}}
     {%- endcomment -%}
 {{ content }}
+    <noscript>
+        <ul>
+            {%- for category in categories %}
+            <li>
+                <a href="{{category_links[forloop.index0]}}">{{ category }}</a>
+            </li>
+            {% endfor -%}
+        </ul>
+    </noscript>
     <div class="portfolio_thumb_section">
 {%- assign placed_category_picker = false -%}
 {% for item in site.works reversed %}
@@ -20,9 +30,9 @@ layout: default
     {%- if show_item -%}
         <div class="portfolio_thumb_item">
             {%- if placed_category_picker == false %}
-            <select id="category_picker" onchange = "selectCategory(event)">
+            <select id="category_picker" class="invisible" onchange="selectCategory(event)">
                 {%- for category in categories %}
-                <option{%- if category == page.selected_category %} selected{%- endif -%}>{{ category}}</option>
+                <option value="{{category_links[forloop.index0]}}"{%- if category == page.selected_category %} selected{%- endif -%}>{{ category }}</option>
                 {% endfor -%}
             </select>
             {%- assign placed_category_picker = true -%}
