Finish adding alt text for all portfolio images and improve screen readability of social links section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
+        <ul class="social-media-list" aria-label="Social Links">
           {% if site.github_username %}
           <li>
             {% include icon-github.html username=site.github_username %}
