--- a/_includes/icon-mastodon.html
+++ b/_includes/icon-mastodon.html
@@ -1,1 +1,1 @@
-<a rel="me" href="{{ include.url }}"><span class="icon icon--mastodon">{% include icon-mastodon.svg %}</span><span class="username">{{ include.username }}</span></a>
+<a rel="me" href="{{ include.url }}" title="My Mastodon/Fediverse Profile"><span class="icon icon--mastodon">{% include icon-mastodon.svg %}</span><span class="username">{{ include.username }}</span></a>
