--- a/_includes/icon-youtube.html
+++ b/_includes/icon-youtube.html
@@ -1,1 +1,1 @@
-<a rel="me" href="{{ include.url }}"><span class="icon icon--youtube">{% include icon-youtube.svg %}</span><span class="username">{{ include.username }}</span></a>
+<a rel="me" href="{{ include.url }}" title="My YouTube Channel"><span class="icon icon--youtube">{% include icon-youtube.svg %}</span><span class="username">{{ include.username }}</span></a>
